feat: start main page

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <meta name="description" content="" />
+    <title>BloomExpress – Fast & Fresh Flower Delivery Across India</title>
+    <meta
+      name="description"
+      content="Order fresh flowers with BloomExpress – India’s leading flower delivery service. Same-day delivery, handcrafted bouquets, and premium quality blooms for any occasion. Send love with flowers today!"
+    />
     <link rel="icon" href="assets/img/logo.png" type="image/x-icon" />
     <link rel="shortcut icon" href="assets/img/logo.png" type="image/x-icon" />
     <link rel="stylesheet" href="style.css" />
@@ -13,35 +16,352 @@
   <body>
     <header class="header"></header>
     <main>
-      <!-- <section class="section">
-      <div class="container">
-        <form
-          class="form"
-          action="thanks_form.php"
-          method="post"
+      <section class="section section-hero bg-pink">
+        <div class="container section-hero__hero-container">
+          <h1>Fresh Flowers,<br />Fast Delivery Across India</h1>
+          <p class="subtitle">
+            Brighten someone's day with a handcrafted bouquet from
+            🌸BloomExpress🌸.<br />We deliver fresh, beautiful flowers straight
+            to your loved ones – anytime, anywhere.
+          </p>
+          <a href="index.html#section-form" class="button button-primary"
+            >Order Now</a
           >
-
-          <input class="form__input" type="text" name="name" placeholder="Name" required>
-          <input class="form__input" type="email" name="email" placeholder="Email" required>
-          <textarea
-            class="form__input"
-            type="text"
-            name="text"
-            placeholder="Message"
-            minlength="2"
-            maxlength="500"
-            required
-          ></textarea>
-
-          <div class="form__checkbox">
-            <input type="checkbox" name="privacy" value="on" required>
-              I accept <a href="privacy-policy.html">privacy policy</a>
+        </div>
+      </section>
+      <section class="section section-advantages">
+        <div class="container">
+          <div class="title-wrap">
+            <h2>Why BloomExpress?</h2>
+            <p>We have huge advantages for you!</p>
+            <p>
+              At BloomExpress, we prioritize our customers' preferences and
+              strive to meet their unique needs. Whether you have specific
+              flower requests or need a custom arrangement, our team is
+              dedicated to providing personalized service to ensure your
+              satisfaction.
+            </p>
           </div>
+          <div class="section-wrapper section-wrapper_pink">
+            <div class="section-advantages__inner-grid">
+              <div class="section-advantages__card-item">
+                <div class="card-wrap">
+                  <h3>Lightning-Fast Delivery</h3>
+                  <p>
+                    We guarantee same-day and next-day delivery across India,
+                    ensuring your flowers arrive fresh and on time.
+                  </p>
+                </div>
+                <img class="card-icon" src="assets/svg/truck.svg" alt="Truck" />
+              </div>
+              <div class="section-advantages__card-item">
+                <div class="card-wrap">
+                  <h3>Handcrafted by Local Florists</h3>
+                  <p>
+                    Every bouquet is designed by expert florists using the
+                    freshest, high-quality blooms for a unique and stunning
+                    arrangement.
+                  </p>
+                </div>
+                <img class="card-icon" src="assets/svg/shop.svg" alt="Shop" />
+              </div>
+              <div class="section-advantages__card-item">
+                <div class="card-wrap">
+                  <h3>Flowers for Every Occasion</h3>
+                  <p>
+                    From birthdays to anniversaries, celebrations to condolences
+                    – we have the perfect bouquet to express your feelings.
+                  </p>
+                </div>
+                <img
+                  class="card-icon"
+                  src="assets/svg/flower1.svg"
+                  alt="Flower"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section section-gallery">
+        <div class="container">
+          <div class="title-wrap">
+            <h2>Our Bestsellers</h2>
+            <p>
+              Explore our wide selection of bouquets, perfect for any occasion.
+              From romantic roses to cheerful sunflowers, BloomExpress offers a
+              variety of fresh flowers to brighten your day.
+            </p>
+          </div>
+          <div class="gallery">
+            <a href="index.html#section-form" class="gallery-item">
+              <div class="gallery-item__img-wrap">
+                <img
+                  class="img-fill"
+                  src="assets/img/roses-1.png"
+                  alt="Bestseller 1"
+                />
+              </div>
+              <h3 class="gallery-item-caption">Royal Lotus Elegance</h3>
+              <div class="button button-primary btn-sm">Order</div>
+            </a>
+            <a href="index.html#section-form" class="gallery-item">
+              <div class="gallery-item__img-wrap">
+                <img
+                  class="img-fill"
+                  src="assets/img/roses-2.png"
+                  alt="Bestseller 2"
+                />
+              </div>
+              <h3 class="gallery-item-caption">Sunset Rose Symphony</h3>
+              <div class="button button-primary btn-sm">Order</div>
+            </a>
+            <a href="index.html#section-form" class="gallery-item">
+              <div class="gallery-item__img-wrap">
+                <img
+                  class="img-fill"
+                  src="assets/img/roses-3.png"
+                  alt="Bestseller 3"
+                />
+              </div>
+              <h3 class="gallery-item-caption">Blossom Whisper</h3>
+              <div class="button button-primary btn-sm">Order</div>
+            </a>
+            <a href="index.html#section-form" class="gallery-item">
+              <div class="gallery-item__img-wrap">
+                <img
+                  class="img-fill"
+                  src="assets/img/roses-4.png"
+                  alt="Bestseller 4"
+                />
+              </div>
+              <h3 class="gallery-item-caption">Golden Marigold Delight</h3>
+              <div class="button button-primary btn-sm">Order</div>
+            </a>
+          </div>
+        </div>
+      </section>
+      <section class="section section-special">
+        <div class="container">
+          <div class="section-special__grid">
+            <div class="section-speacial__contents">
+              <h2>
+                Large
+                <span class="text-primary">Flower</span> Arrangements
+              </h2>
+              <p>
+                Large flower arrangements are our special offer from
+                BloomExpress for decorating and decorating your holidays and
+                important events
+              </p>
+              <ul class="list-events">
+                <li>
+                  🌺Perfect for <span class="text-primary"> weddings</span>!
+                </li>
+                <li>
+                  🌷Ideal for <span class="text-primary"> birthdays</span>!
+                </li>
+                <li>
+                  🌹Great for <span class="text-primary"> anniversaries</span>!
+                </li>
+              </ul>
+            </div>
+            <div class="section-special__img-wrap">
+              <img
+                class="img-fill"
+                src="assets/img/large.png"
+                alt="Large Flower Arrangement"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section section-contents">
+        <div class="container">
+          <div class="section-contents__contents">
+            <div class="">
+              <h2>Explore New World</h2>
+              <p>
+                🌹Flowers are a timeless and thoughtful gift that can convey a
+                wide range of emotions.
+              </p>
+              <p>
+                They are perfect for any occasion, whether it's to celebrate a
+                special event, express sympathy, or simply brighten someone's
+                day.
+              </p>
+              <p>
+                Flowers have a natural beauty and fragrance that can uplift
+                spirits and create a sense of joy and appreciation.
+                Additionally, they are a versatile gift that can be customized
+                to suit the recipient's preferences and the occasion.
+              </p>
+            </div>
+            <div class="section-contents__small-gallery">
+              <img
+                class="img-sm"
+                src="assets/img/bouquet-1.png"
+                alt="Bouquet"
+              />
+              <div class=""></div>
+              <img
+                class="img-sm"
+                src="assets/img/bouquet-2.png"
+                alt="Bouquet"
+              />
+              <div class=""></div>
+              <img
+                class="img-sm"
+                src="assets/img/bouquet-3.png"
+                alt="Bouquet"
+              />
+              <img
+                class="img-sm"
+                src="assets/img/bouquet-4.png"
+                alt="Bouquet"
+              />
+              <img
+                class="img-sm"
+                src="assets/img/bouquet-5.png"
+                alt="Bouquet"
+              />
+              <img
+                class="img-sm"
+                src="assets/img/bouquet-6.png"
+                alt="Bouquet"
+              />
+              <img
+                class="img-sm"
+                src="assets/img/bouquet-7.png"
+                alt="Bouquet"
+              />
+              <img
+                class="img-sm"
+                src="assets/img/bouquet-8.png"
+                alt="Bouquet"
+              />
+              <img
+                class="img-sm"
+                src="assets/img/bouquet-9.png"
+                alt="Bouquet"
+              />
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section section-steps">
+        <div class="container">
+          <div class="title-wrap">
+            <h2>Fast & Easy Flower Delivery</h2>
+          </div>
+          <div class="steps">
+            <div class="step gallery-item">
+              <h3>1. Choose a Bouquet</h3>
+              <p>Browse our catalog and select the bouquet you like.</p>
+            </div>
+            <div class="step gallery-item">
+              <h3>2. Place an Order</h3>
+              <p>Fill out the order form with all the necessary details.</p>
+            </div>
+            <div class="step gallery-item">
+              <h3>3. Make a Payment</h3>
+              <p>
+                Choose a convenient payment method and complete your purchase.
+              </p>
+            </div>
+            <div class="step__img">
+              <img
+                class="img-fill"
+                src="assets/img/delivery.png"
+                alt="Happy people with flowers"
+              />
+            </div>
+            <div class="step gallery-item">
+              <h3>4. We Deliver the Flowers</h3>
+              <p>
+                Our couriers will deliver your bouquet at the specified time and
+                place.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section">
+        <div class="container">
+          <div class="title-wrap">
+            <h2></h2>
+          </div>
+        </div>
+      </section>
+      <section class="section">
+        <div class="container">
+          <div class="title-wrap">
+            <h2></h2>
+          </div>
+        </div>
+      </section>
+      <section class="section">
+        <div class="container">
+          <div class="title-wrap">
+            <h2></h2>
+          </div>
+        </div>
+      </section>
+      <section class="section">
+        <div class="container">
+          <div class="title-wrap">
+            <h2></h2>
+          </div>
+        </div>
+      </section>
+      <section class="section section-form" id="section-form">
+        <div class="container">
+          <div class="section-wrapper section-wrapper_img bg-pink">
+            <div class="section-form__title">
+              <h2>Order Your Flowers</h2>
+              <p>
+                Fill out the form below to place your order and send beautiful
+                flowers to your loved ones.
+              </p>
+            </div>
+            <form class="form" action="thanks_form.php" method="post">
+              <input
+                class="form__input"
+                type="text"
+                name="name"
+                placeholder="Name"
+                required
+              />
+              <input
+                class="form__input"
+                type="email"
+                name="email"
+                placeholder="Email"
+                required
+              />
+              <textarea
+                class="form__input"
+                type="text"
+                name="text"
+                placeholder="Message"
+                minlength="2"
+                maxlength="500"
+                required
+              ></textarea>
 
-          <button class="button">Sssssss</button>
-        </form>
-      </div>
-    </section> -->
+              <div class="form__checkbox">
+                <input type="checkbox" name="privacy" value="on" required />
+                I accept
+                <a class="form__link" href="privacy-policy.html"
+                  >privacy policy</a
+                >
+              </div>
+
+              <button class="button button-primary">Send</button>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
@@ -50,7 +370,7 @@
       <!-- +91 XXXXX-XXXXX - Индия.
        +55 XX XXXXX-XXXX - Бразилия. -->
       <a href="http://" target="_blank"></a>
-    </footer>
+    <scriptr>
     <script src="script.js"></script>
   </body>
 </html>
